# recipe-kit

./: README.md  main.py  pyproject.toml  sample_recipe.txt  sample_recipe2.txt
app/: calc.py  recipe.py  url_parser.py
test/: test_calc.py  test_recipe.py
test/sample_recipes/: apple_cinnamon_porridge_ok.txt  carrot_orange_porridge_ok.txt  chicken_marinade_1_ok.txt  choco_matcha_truffels_sugar_free_ok.txt  chocolate_mousse_cardamon_organge_ok.txt  coconut_amaranth_bars_ok.txt  eggplant_parm.chips_ok.txt  kale_pesto_pasta_with_grilled_fennel_ok.txt  kartoffelsalat_ok.txt  libanese_curcuma_gries_cake_ok.txt  links_error.txt  nice_cream_ok.txt  sample_recipe_ok.txt
