[tool.poetry]
name = "recipe-kit"
version = "0.1.0"
description = "Cooking kit for standardizing recipes found online and converting them to an international standard format"
authors = ["Joakim Weckman <joakim.weckman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
requests = "^2.25.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
